Modifique los balores de los inputs

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     <form action="" class="">
                         <p class="text-danger small">*Todos los campos son oblogatorias </p>
                         <label for="apellido">Apellido Paterno:</label>
-                        <input class="" id="" type="text" placeholder="apellido paterno" required=""><br>
+                        <input class="form-control" id="inputap" name="inputap" placeholder="apellido paterno" required="" ><br>
                         <label for="nombre">Nombre:</label>
-                        <input class="" id="" type="text" placeholder="apellido nombre" required="">
+                        <input class="form-control" id="inputname" name="inputname" placeholder="nombre" required="" >
                     </form>
                 </article>
                 <aside class="col-xs-12 col-sm-8 col-md-4">
